• Add leftMenu in script • Add Priority to User Stories

--- a/contributors.html
+++ b/contributors.html
@@ -17,7 +17,7 @@
 <body>
     <!--container-->
     <div class="container">
-        <!--logo / navigation-->
+        <!-- logo / navigation -->
         <sidebar-menu></sidebar-menu>
         <!--main-->
         <main>
@@ -43,8 +43,11 @@
                         </div>
                         <div class="contributor-content">
                             <h3>Amir Fahimnia</h3>
-                            <!-- <p>UI/UX / Front-End</p> -->
-                            <button class="contributor-btn"><span class="icon"><ion-icon name="logo-github"></ion-icon></span></button>
+                            <div class="contributor-btn">
+                                <a href="https://github.com/Faktor22/Plex-PRD" target="_blank">
+                                    <span class="icon"><ion-icon name="logo-github"></ion-icon></span>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="contributor">
@@ -53,7 +56,11 @@
                         </div>
                         <div class="contributor-content">
                             <h3>Justin Norman</h3>
-                            <button class="contributor-btn"><span class="icon"><ion-icon name="logo-gitlab"></ion-icon></span></button>
+                            <div class="contributor-btn">
+                                <a href="#" target="_blank">
+                                    <span class="icon"><ion-icon name="logo-gitlab"></ion-icon></span>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="contributor">
@@ -62,7 +69,11 @@
                         </div>
                         <div class="contributor-content">
                             <h3>Bart van de Leur</h3>
-                            <button class="contributor-btn"><span class="icon"><ion-icon name="logo-gitlab"></ion-icon></span></button>
+                            <div class="contributor-btn">
+                                <a href="#" target="_blank">
+                                    <span class="icon"><ion-icon name="logo-gitlab"></ion-icon></span>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="contributor">
@@ -71,7 +82,11 @@
                         </div>
                         <div class="contributor-content">
                             <h3>Yuri van Vugt</h3>
-                            <button class="contributor-btn"><span class="icon"><ion-icon name="logo-gitlab"></ion-icon></span></button>
+                            <div class="contributor-btn">
+                                <a href="#" target="_blank">
+                                    <span class="icon"><ion-icon name="logo-gitlab"></ion-icon></span>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="contributor">
@@ -80,7 +95,11 @@
                         </div>
                         <div class="contributor-content">
                             <h3>Sonja Reintjens</h3>
-                            <button class="contributor-btn"><span class="icon"><ion-icon name="logo-gitlab"></ion-icon></span></button>
+                            <div class="contributor-btn">
+                                <a href="#" target="_blank">
+                                    <span class="icon"><ion-icon name="logo-gitlab"></ion-icon></span>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="contributor">
@@ -89,7 +108,11 @@
                         </div>
                         <div class="contributor-content">
                             <h3>Leon van der Vleuten</h3>
-                            <button class="contributor-btn"><span class="icon"><ion-icon name="logo-gitlab"></ion-icon></span></button>
+                            <div class="contributor-btn">
+                                <a href="#" target="_blank">
+                                    <span class="icon"><ion-icon name="logo-gitlab"></ion-icon></span>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -103,8 +126,6 @@
                         </div>
                         <div class="contributor-content">
                             <h3>Leon van Bokhorst</h3>
-                            <!-- <p>UI/UX / Front-End</p> -->
-                            <button class="contributor-btn"><span class="icon"><ion-icon name="logo-github"></ion-icon></span></button>
                         </div>
                     </div>
                     <div class="contributor">
@@ -113,7 +134,6 @@
                         </div>
                         <div class="contributor-content">
                             <h3>Jean Paul Ligthart</h3>
-                            <button class="contributor-btn"><span class="icon"><ion-icon name="logo-gitlab"></ion-icon></span></button>
                         </div>
                     </div>
                 </div>
