--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <!--container-->
     <div class="container">
-        <!--logo / navigation-->
+        <!-- logo / navigation -->
         <sidebar-menu></sidebar-menu>
         <!--main-->
         <main>
@@ -36,6 +36,10 @@
             </div>
             <!--content-->
             <div class="intro-page">
+                <!--progress bar-->
+                <!-- <div class="progress-container">
+                    <div class="progress-bar" id="progress-indicator" style="background: #6200d9;"></div>
+                </div> -->
                 <a id="intro"></a>
                 <h1>Product Requirements Document</h1>
                 <hr>
