--- a/scope.html
+++ b/scope.html
@@ -17,7 +17,7 @@
 <body>
     <!--container-->
     <div class="container">
-        <!--logo / navigation-->
+        <!-- logo / navigation -->
         <sidebar-menu></sidebar-menu>
         <!--main-->
         <main>
@@ -48,7 +48,10 @@
                                     <li>De keuze kan worden opgeslagen</li>
                                 </ul>
                             </div>
-                            <p class="categorie">Categorie: <span class="categorie-bg project-select">Project select</span></p>
+                            <div class="acceptatie-footer">
+                                <p class="categorie">Categorie: <span class="categorie-bg project-select">Project select</span></p>
+                                <p class="categorie">Prioriteit: <span class="categorie-bg prioriteit">Must</span></p>
+                            </div>
                         </div>
 
                         <div class="userstories-cards">
@@ -59,31 +62,10 @@
                                     <li>Per project is de titel, een uitgebreide description, categorieën, URL en de uploader te zien in een pop-up.</li>
                                 </ul>
                             </div>
-                            <p class="categorie">Categorie: <span class="categorie-bg browsen-project">Browsen project</span></p>
-                        </div>
-
-                        <div class="userstories-cards">
-                            <p class="userstorie-titel">Als docent wil ik als ik een nieuw project aan DeX heb toegevoegd, dit project meteen in PLeX zien zodat ik deze kan toevoegen aan een lijst.</p>
-                            <div class="acceptatie-container">
-                                <p class="acceptatie">Acceptatiecriteria</p>
-                                <ul class="list">
-                                    <li>nog uit te werken</li>
-                                </ul>
+                            <div class="acceptatie-footer">
+                                <p class="categorie">Categorie: <span class="categorie-bg browsen-project">Browsen project</span></p>
+                                <p class="categorie">Prioriteit: <span class="categorie-bg prioriteit">Should</span></p>
                             </div>
-                            <p class="categorie">Categorie: <span class="categorie-bg project-select">Project select</span></p>
-                        </div>
-
-                        <div class="userstories-cards">
-                            <p class="userstorie-titel">Als docent wil ik als ik een nieuw project aan DeX heb toegevoegd, dit project meteen in PLeX zien zodat ik deze kan toevoegen aan een lijst.</p>
-                            <div class="acceptatie-container">
-                                <p class="acceptatie">Acceptatiecriteria</p>
-                                <ul class="list">
-                                    <li>Projecten zijn te zien</li>
-                                    <li>Per project is de titel en categorieën te zien</li>
-                                    <li>De voorkeuren van de studenten zijn te zien</li>
-                                </ul>
-                            </div>
-                            <p class="categorie">Categorie: <span class="categorie-bg groep-vormen">Groep vormen</span></p>
                         </div>
 
                         <div class="userstories-cards">
@@ -94,7 +76,10 @@
                                     <li>nog uit te werken</li>
                                 </ul>
                             </div>
-                            <p class="categorie">Categorie: <span class="categorie-bg groep-vormen">Groep vormen</span></p>
+                            <div class="acceptatie-footer">
+                                <p class="categorie">Categorie: <span class="categorie-bg groep-vormen">Groep vormen</span></p>
+                                <p class="categorie">Prioriteit: <span class="categorie-bg prioriteit">Must</span></p>
+                            </div>
                         </div>
 
                         <div class="userstories-cards">
@@ -105,7 +90,10 @@
                                     <li>nog uit te werken</li>
                                 </ul>
                             </div>
-                            <p class="categorie">Categorie: <span class="categorie-bg groep-vormen">Groep vormen</span></p>
+                            <div class="acceptatie-footer">
+                                <p class="categorie">Categorie: <span class="categorie-bg groep-vormen">Groep vormen</span></p>
+                                <p class="categorie">Prioriteit: <span class="categorie-bg prioriteit">Should</span></p>
+                            </div>
                         </div>
 
                         <div class="userstories-cards">
@@ -116,7 +104,10 @@
                                     <li>nog uit te werken</li>
                                 </ul>
                             </div>
-                            <p class="categorie">Categorie: <span class="categorie-bg browsen-project">Browsen project</span></p>
+                            <div class="acceptatie-footer">
+                                <p class="categorie">Categorie: <span class="categorie-bg browsen-project">Browsen project</span></p>
+                                <p class="categorie">Prioriteit: <span class="categorie-bg prioriteit">Could</span></p>
+                            </div>
                         </div>
 
                         <div class="userstories-cards">
@@ -127,7 +118,10 @@
                                     <li>nog uit te werken</li>
                                 </ul>
                             </div>
-                            <p class="categorie">Categorie: <span class="categorie-bg ux">UI / UX</span></p>
+                            <div class="acceptatie-footer">
+                                <p class="categorie">Categorie: <span class="categorie-bg ux">UI / UX</span></p>
+                                <p class="categorie">Prioriteit: <span class="categorie-bg prioriteit">Should</span></p>
+                            </div>
                         </div>
 
                         <div class="userstories-cards">
@@ -138,7 +132,10 @@
                                     <li>nog uit te werken</li>
                                 </ul>
                             </div>
-                            <p class="categorie">Categorie: <span class="categorie-bg groep-vormen">Groep vormen</span></p>
+                            <div class="acceptatie-footer">
+                                <p class="categorie">Categorie: <span class="categorie-bg groep-vormen">Groep vormen</span></p>
+                                <p class="categorie">Prioriteit: <span class="categorie-bg prioriteit">Should</span></p>
+                            </div>
                         </div>
 
                         <div class="userstories-cards">
@@ -149,7 +146,10 @@
                                     <li>nog uit te werken</li>
                                 </ul>
                             </div>
-                            <p class="categorie">Categorie: <span class="categorie-bg groep-vormen">Groep vormen</span></p>
+                            <div class="acceptatie-footer">
+                                <p class="categorie">Categorie: <span class="categorie-bg groep-vormen">Groep vormen</span></p>
+                                <p class="categorie">Prioriteit: <span class="categorie-bg prioriteit">Could</span></p>
+                            </div>
                         </div>
 
                         <div class="userstories-cards">
@@ -160,7 +160,10 @@
                                     <li>nog uit te werken</li>
                                 </ul>
                             </div>
-                            <p class="categorie">Categorie: <span class="categorie-bg project-select">Project select</span></p>
+                            <div class="acceptatie-footer">
+                                <p class="categorie">Categorie: <span class="categorie-bg project-select">Project select</span></p>
+                                <p class="categorie">Prioriteit: <span class="categorie-bg prioriteit">Could</span></p>
+                            </div>
                         </div>
 
                         <div class="userstories-cards">
@@ -171,7 +174,10 @@
                                     <li>nog uit te werken</li>
                                 </ul>
                             </div>
-                            <p class="categorie">Categorie: <span class="categorie-bg groep-vormen">Groep vormen</span></p>
+                            <div class="acceptatie-footer">
+                                <p class="categorie">Categorie: <span class="categorie-bg groep-vormen">Groep vormen</span></p>
+                                <p class="categorie">Prioriteit: <span class="categorie-bg prioriteit">Should</span></p>
+                            </div>
                         </div>
 
                         <div class="userstories-cards">
@@ -182,7 +188,10 @@
                                     <li>nog uit te werken</li>
                                 </ul>
                             </div>
-                            <p class="categorie">Categorie: <span class="categorie-bg browsen-project">Browsen project</span></p>
+                            <div class="acceptatie-footer">
+                                <p class="categorie">Categorie: <span class="categorie-bg browsen-project">Browsen project</span></p>
+                                <p class="categorie">Prioriteit: <span class="categorie-bg prioriteit">Could</span></p>
+                            </div>
                         </div>
 
                         <div class="userstories-cards">
@@ -193,7 +202,10 @@
                                     <li>nog uit te werken</li>
                                 </ul>
                             </div>
-                            <p class="categorie">Categorie: <span class="categorie-bg project-select">Project select</span></p>
+                            <div class="acceptatie-footer">
+                                <p class="categorie">Categorie: <span class="categorie-bg project-select">Project select</span></p>
+                                <p class="categorie">Prioriteit: <span class="categorie-bg prioriteit">Won't</span></p>
+                            </div>
                         </div>
 
                         <div class="userstories-cards">
@@ -204,7 +216,10 @@
                                     <li>nog uit te werken</li>
                                 </ul>
                             </div>
-                            <p class="categorie">Categorie: <span class="categorie-bg project-lijst">Project lijst</span></p>
+                            <div class="acceptatie-footer">
+                                <p class="categorie">Categorie: <span class="categorie-bg project-lijst">Project lijst</span></p>
+                                <p class="categorie">Prioriteit: <span class="categorie-bg prioriteit">Won't</span></p>
+                            </div>
                         </div>
 
                     </div>
@@ -221,7 +236,10 @@
                                     <li>Per project is de titel, korte omschrijving en categorieën te zien</li>
                                 </ul>
                             </div>
-                            <p class="categorie">Categorie: <span class="categorie-bg project-select">Project select</span></p>
+                            <div class="acceptatie-footer">
+                                <p class="categorie">Categorie: <span class="categorie-bg project-select">Project select</span></p>
+                                <p class="categorie">Prioriteit: <span class="categorie-bg prioriteit">Must</span></p>
+                            </div>
                         </div>
 
                         <div class="userstories-cards">
@@ -232,8 +250,11 @@
                                     <li>Geeft een lijst weer van de door de docent geselecteerde projecten</li>
                                     <li>Per project is de titel, korte omschrijving en categorieën te zien</li>
                                 </ul>
-                            </div>`
-                            <p class="categorie">Categorie: <span class="categorie-bg project-select">Project select</span></p>
+                            </div>
+                            <div class="acceptatie-footer">
+                                <p class="categorie">Categorie: <span class="categorie-bg project-select">Project select</span></p>
+                                <p class="categorie">Prioriteit: <span class="categorie-bg prioriteit">Must</span></p>
+                            </div>
                         </div>
 
                         <div class="userstories-cards">
@@ -245,7 +266,10 @@
                                     <li>Prototypes worden gevalideerd met gebruikers</li>
                                 </ul>
                             </div>
-                            <p class="categorie">Categorie: <span class="categorie-bg ux">UI / UX</span></p>
+                            <div class="acceptatie-footer">
+                                <p class="categorie">Categorie: <span class="categorie-bg ux">UI / UX</span></p>
+                                <p class="categorie">Prioriteit: <span class="categorie-bg prioriteit">Must</span></p>
+                            </div>
                         </div>
 
                         <div class="userstories-cards">
@@ -259,7 +283,10 @@
                                     <li>De categorien worden opgehaald uit DeX</li>
                                 </ul>
                             </div>
-                            <p class="categorie">Categorie: <span class="categorie-bg project-select">Project select</span></p>
+                            <div class="acceptatie-footer">
+                                <p class="categorie">Categorie: <span class="categorie-bg project-select">Project select</span></p>
+                                <p class="categorie">Prioriteit: <span class="categorie-bg prioriteit">Must</span></p>
+                            </div>
                         </div>
 
                         <div class="userstories-cards">
@@ -273,7 +300,10 @@
                                     <li>De categorien worden opgehaald uit DeX</li>
                                 </ul>
                             </div>
-                            <p class="categorie">Categorie: <span class="categorie-bg project-select">Project select</span></p>
+                            <div class="acceptatie-footer">
+                                <p class="categorie">Categorie: <span class="categorie-bg project-select">Project select</span></p>
+                                <p class="categorie">Prioriteit: <span class="categorie-bg prioriteit">Must</span></p>
+                            </div>
                         </div>
 
                         <div class="userstories-cards">
@@ -289,7 +319,10 @@
                                     <li>Bestaande code aanpassen</li>
                                 </ul>
                             </div>
-                            <p class="categorie">Categorie: <span class="categorie-bg spike">Spike</span></p>
+                            <div class="acceptatie-footer">
+                                <p class="categorie">Categorie: <span class="categorie-bg spike">Spike</span></p>
+                                <p class="categorie">Prioriteit: <span class="categorie-bg prioriteit">Should</span></p>
+                            </div>
                         </div>
 
                     </div>
