--- a/contributors.html
+++ b/contributors.html
@@ -104,7 +104,7 @@
                     </div>
                     <div class="contributor">
                         <div class="contributor-img">
-                            <img src="../img/empty.jpg" alt="" />
+                            <img src="../img/leon-van-de-vleuten.jpg" alt="" />
                         </div>
                         <div class="contributor-content">
                             <h3>Leon van der Vleuten</h3>
