--- a/design.html
+++ b/design.html
@@ -25,7 +25,7 @@
 
                 <div class="sub-header">
                     <h1>UI / UX</h1>
-                    <button class="btn-plex btn-plex-yellow"><span class="icon-primary icon-design"><ion-icon name="download-outline"></ion-icon></span>Styleguide</button>
+                    <a href="files/BrandGuide-PleX.pdf" class="btn-plex btn-plex-yellow"><span class="icon-primary icon-design"><ion-icon name="download-outline"></ion-icon></span>Styleguide</a>
                 </div>
 
                 <hr>
@@ -34,9 +34,10 @@
 
                 <h2>Research- & design resources:</h2>
                 <ul class="list">
-                    <li>User research template</li>
-                    <li>Huisstijl guide (PDF)</li>
-                    <li>Hi-fi prototype (Adobe XD)</li>
+                    <li><a href="files/Usability_Test_Script_Plex.pdf" class="link-underline">User research template (PDF)</a></li>
+                    <li><a href="files/BrandGuide-PleX.pdf" class="link-underline">Huisstijl guide (PDF)</a></li>
+                    <li><a href="files/Usability_Test_Script_Plex.pdf" class="link-underline">Hi-fi prototype (Adobe XD)</a></li>
+                    <li><a href="files/Montserrat.zip" class="link-underline">Download Montserrat Font Family (Zip)</a></li>
                 </ul>
 
                 <!--Project View-->
