--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 </head>
 
 <body>
+
+    <!--Scroll to Top-->
+    <button id="toTop" title="Go to top"><span class="icon-intro"><ion-icon name="arrow-up-outline"></ion-icon></span></button>
     <!--container-->
     <div class="container">
         <!-- logo / navigation -->
@@ -23,7 +26,7 @@
         <!--main-->
         <main>
             <!--topbar-->
-            <div class="topbar">
+            <!-- <div class="topbar">
                 <nav>
                     <li><a class="active-topbar btn-plex btn-plex-yellow" href="#intro">Intro & Doel</a></li>
                     <li><a class="btn-plex btn-plex-white" href="#who">Voor wie</a></li>
@@ -33,15 +36,19 @@
                     <li><a class="btn-plex btn-plex-white" href="code.html">Code</a></li>
                     <li><a class="btn-plex btn-plex-blue bg-blue" href="https://github.com/Faktor22/Plex-PRD" target="_blank"><span class="icon-intro"><ion-icon name="logo-github"></ion-icon></span></a></li>
                 </nav>
-            </div>
+            </div> -->
             <!--content-->
-            <div class="intro-page">
+            <div class="intro-page sub-page">
                 <!--progress bar-->
                 <!-- <div class="progress-container">
                     <div class="progress-bar" id="progress-indicator" style="background: #6200d9;"></div>
                 </div> -->
                 <a id="intro"></a>
-                <h1>Product Requirements Document</h1>
+                <div class="sub-header">
+                    <h1>Product Requirements Document</h1>
+                    <button class="btn-plex btn-plex-yellow"><a href="https://github.com/Faktor22/Plex-PRD" target="_blank"><span class="icon-intro"><ion-icon name="logo-github"></ion-icon></span></a></button>
+                </div>
+
                 <hr>
                 <h2>Intro en doel</h2>
                 <p>Dit product requirements document is bedoeld om de overdraagbaarheid / opvolging van het PLEX project zo efficiënt mogelijk te laten verlopen, zodat gedurende de ontwikkeling en uitbreiding van het project meerdere teams en individuen
@@ -141,7 +148,7 @@
                     </div>
                 </div>
 
-                <p>Op de pagina’s UX/UI en Software zijn de resources, guides en sjablonen te vinden waarmee iedereen die dat wil, aan slag kan gaan.</p>
+                <p>Op de pagina’s <a href="design.html" class="link-underline">UX/UI</a> en <a href="code.html" class="link-underline">Software</a> zijn de resources, guides en sjablonen te vinden waarmee iedereen die dat wil, aan slag kan gaan.</p>
 
             </div>
         </main>
