--- a/scope.html
+++ b/scope.html
@@ -30,8 +30,8 @@
 
                 <hr>
                 <h2>User stories and requirements</h2>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pharetra, neque non aliquam tincidunt, urna lacus ornare urna, eu rutrum lectus metus vel lorem. Quisque et iaculis velit. Maecenas vel leo in felis efficitur malesuada. Aenean
-                    ut lectus in est tincidunt cursus vitae eu dui. Nulla ut libero eu sem egestas finibus. Integer mauris justo, finibus in ullamcorper ac, eleifend nec eros.</p>
+                <p>Over de loop van het project zijn er userstories gemaakt om de functies van het project te vangen, hierbij is nagedacht over de acties die een gebruiker moet kunnen doen. Deze zijn opgesplitst in verschillende onderdelen. Ook hebben de
+                    verschillende userstories prioriteiten. De userstories zijn hieronder te vinden.</p>
 
                 <!--userstories-->
                 <div class="userstories-container">
