• Add some styling • Add files link

--- a/code.html
+++ b/code.html
@@ -43,7 +43,7 @@
                         </ul>
                     </div>
                     <div class="project-image">
-                        <img class="separator" src="../img/plex-c1-context.png" alt="Seperator image" />
+                        <img class="separator base" src="../img/plex-c1-context.png" alt="Seperator image" />
                     </div>
                 </div>
 
@@ -58,7 +58,7 @@
                         </ul>
                     </div>
                     <div class="project-image">
-                        <img class="separator" src="../img/plex-c2-containers.png" alt="Seperator image" />
+                        <img class="separator base" src="../img/plex-c2-containers.png" alt="Seperator image" />
                     </div>
                 </div>
 
@@ -83,7 +83,7 @@
                         </ul>
                     </div>
                     <div class="project-image">
-                        <img class="separator" src="../img/plex-c3-components.png" alt="Seperator image" />
+                        <img class="separator base" src="../img/plex-c3-components.png" alt="Seperator image" />
                     </div>
                 </div>
 
