--- a/design.html
+++ b/design.html
@@ -33,11 +33,11 @@
                     onderstaande bestanden beschikbaar.</p>
 
                 <h2>Research- & design resources:</h2>
-                <ul class="list">
-                    <li><a href="files/Usability_Test_Script_Plex.pdf" class="link-underline">User research template (PDF)</a></li>
-                    <li><a href="files/BrandGuide-PleX.pdf" class="link-underline">Huisstijl guide (PDF)</a></li>
-                    <li><a href="files/Usability_Test_Script_Plex.pdf" class="link-underline">Hi-fi prototype (Adobe XD)</a></li>
-                    <li><a href="files/Montserrat.zip" class="link-underline">Download Montserrat Font Family (Zip)</a></li>
+                <ul class="list-icon">
+                    <li><a href="files/Usability_Test_Script_Plex.pdf" class="link-underline"><span class="icon-primary icon-list"><ion-icon name="download-outline"></ion-icon></span>User research template (PDF)</a></li>
+                    <li><a href="files/BrandGuide-PleX.pdf" class="link-underline"><span class="icon-primary icon-list"><ion-icon name="download-outline"></ion-icon></span>Huisstijl guide (PDF)</a></li>
+                    <li><a href="files/Usability_Test_Script_Plex.pdf" class="link-underline"><span class="icon-primary icon-list"><ion-icon name="rocket-outline"></ion-icon></span>Hi-fi prototype (Adobe XD)</a></li>
+                    <li><a href="files/Montserrat.zip" class="link-underline"><span class="icon-primary icon-list"><ion-icon name="folder-open-outline"></ion-icon></span>Download Montserrat Font Family (Zip)</a></li>
                 </ul>
 
                 <!--Project View-->
