--- a/scope.html
+++ b/scope.html
@@ -25,7 +25,7 @@
 
                 <div class="sub-header">
                     <h1>Scope</h1>
-                    <a href="https://app.clickup.com/24346181/v/b/6-150540616-2" target="_blank"><button class="btn-plex btn-plex-yellow">Clickup<span class="icon-primary icon-code"><ion-icon name="arrow-redo-outline"></ion-icon></span></button></a>
+                    <a href="https://app.clickup.com/24346181/v/b/6-150540616-2" target="_blank"><button class="btn-plex btn-plex-yellow"><span class="icon-primary icon-design"><ion-icon name="download-outline"></ion-icon></span>User stories</button></a>
                 </div>
 
                 <hr>
