• Added SVG animated logo

--- a/design.html
+++ b/design.html
@@ -36,7 +36,7 @@
                 <ul class="list-icon">
                     <li><a href="files/Usability_Test_Script_Plex.pdf" class="link-underline"><span class="icon-primary icon-list"><ion-icon name="download-outline"></ion-icon></span>User research template (PDF)</a></li>
                     <li><a href="files/BrandGuide-PleX.pdf" class="link-underline"><span class="icon-primary icon-list"><ion-icon name="download-outline"></ion-icon></span>Huisstijl guide (PDF)</a></li>
-                    <li><a href="files/Usability_Test_Script_Plex.pdf" class="link-underline"><span class="icon-primary icon-list"><ion-icon name="rocket-outline"></ion-icon></span>Hi-fi prototype (Adobe XD)</a></li>
+                    <li><a href="https://xd.adobe.com/view/d5241ba5-5338-412a-a762-b25eaf7aedb4-8077/?fullscreen&hints=off" target="_blank" class="link-underline"><span class="icon-primary icon-list"><ion-icon name="rocket-outline"></ion-icon></span>Hi-fi prototype (Adobe XD)</a></li>
                     <li><a href="files/Montserrat.zip" class="link-underline"><span class="icon-primary icon-list"><ion-icon name="folder-open-outline"></ion-icon></span>Download Montserrat Font Family (Zip)</a></li>
                 </ul>
 
